Fix: correctly remove text-align center from global selector

--- a/src/styles.css
+++ b/src/styles.css
@@ -57,7 +57,6 @@
   margin: 0;
   padding: 0;
   font-family: Segoe UI, Figtree, BlinkMacSystemFont, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, sans-serif;
-  text-align: center;
 }
 
 html {
